[gd_scene load_steps=3 format=3 uid="uid://vpp1qvbl1qgp"]

[ext_resource type="Script" path="res://items/laser.gd" id="1_gklcs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5sib"]
size = Vector2(1, 4)

[node name="laser" type="Node2D"]
script = ExtResource("1_gklcs")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(1000, 0)

[node name="Line2D" type="Line2D" parent="."]
width = 1.0
default_color = Color(0.639216, 0.219608, 1.74118, 1)

[node name="Line2D2" type="Line2D" parent="."]
width = 1.0
default_color = Color(0.439, 0.725, 1.984, 1)

[node name="Line2D3" type="Line2D" parent="."]
width = 1.0
default_color = Color(0.439216, 0, 1.85882, 1)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_q5sib")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
